navbarcollapse fix

--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,6 +1,5 @@
 .navbar-nav .nav-link.active,
-.navbar-nav .nav-link.clicked 
- {
+.navbar-nav .nav-link.clicked {
     color: #ffbf00;
     text-decoration: none;
 }
@@ -21,3 +20,33 @@
     color: #ffbf00;
 }
 
+.navbar-toggler {
+    border: none;
+    padding-right: 20px;
+    outline: none;
+    box-shadow: none;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active {
+    outline: none;
+    box-shadow: none;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+/* @media (max-width: 992px) {
+    .navbar-nav .nav-link {
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 60%;
+        justify-content: center;
+        border-bottom: 1px solid #8d8b8b; 
+    }
+    
+    .navbar-nav .nav-link:last-child {
+        border-bottom: none;
+    }
+} */
